--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "pgvector-storage"
-version = "0.1.1"
+version = "0.1.4"
 description = ""
 authors = ["kirin <kirin.chen1001@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-psycopg = "^3.2.4"
-openai = "^1.63.0"
+psycopg = {extras = ["binary", "pool"], version = "^3.2.4"}
+openai = "^1.63.2"
 numpy = "^2.2.3"
 
 
